--- a/homework-1/LinearRegressionSemana1.ipynb
+++ b/homework-1/LinearRegressionSemana1.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -69,7 +71,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -160,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -231,7 +237,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -305,7 +313,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -400,7 +410,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -420,7 +432,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -474,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -505,7 +521,9 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -520,6 +538,7 @@
    ],
    "source": [
     "# import model\n",
+    "from LinearR import LinearReg\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "# instantiate\n",
@@ -530,14 +549,17 @@
     "\n",
     "## Excercise 1 \n",
     "# Try your own linear regression algorithm \n",
-    "from LinearR import LinearReg\n",
-    "\n",
     "# instantiate\n",
     "mylinreg = LinearReg()\n",
     "\n",
     "# fit the model to the training data (learn the coefficients)\n",
     "mylinreg.fit(X_train, y_train)\n",
-    "\n"
+    "\n",
+    "y_pred = linreg.predict(X_test)\n",
+    "my_y_pred = linreg.predict(X_test)\n",
+    "\n",
+    "print(y_pred)\n",
+    "print(my_y_pred)"
    ]
   },
   {
@@ -550,7 +572,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -570,7 +594,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -664,7 +690,9 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -696,7 +724,9 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -728,7 +758,9 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -768,7 +800,9 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -842,9 +876,7 @@
    },
    "outputs": [],
    "source": [
-    "## Excercise 2, try nonlinear features and measure the RMSE",
-    "\n",
-    "print(np.sqrt(mylinreg.calculateRMSE(y_test, y_pred)))"
+    "## Excercise 2, try nonlinear features and measure the RMSE\n"
    ]
   },
   {
@@ -854,12 +886,15 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print(mylinreg.calculateRMSE(y_test, y_pred))"
+   ]
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -873,7 +908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
