--- a/homework-4/NeuralNetworksSemana4.ipynb
+++ b/homework-4/NeuralNetworksSemana4.ipynb
@@ -259,6 +259,8 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import SGDClassifier\n",
+    "from Classifier import LogisticRegression\n",
+    "clf_test = LogisticRegression\n",
     "clf = SGDClassifier(loss='log', random_state=1, n_iter=1)\n",
     "doc_stream = stream_docs(path='shuffled_movie_data.csv')\n",
     "# Exercise 2: Define at least a Three layer neural network. Define its structure (number of hidden neurons, etc)\n",
@@ -283,7 +285,7 @@
     "for _ in range(45):\n",
     "    X_train, y_train = get_minibatch(doc_stream, size=1000)\n",
     "    X_train = vect.transform(X_train)\n",
-    "    clf.partial_fit(X_train, y_train, classes=classes)\n",
+    "    clf_test.train(X_train, y_train, classes=classes)\n",
     "    #pbar.update()"
    ]
   },
@@ -505,33 +507,32 @@
    "source": [
     "example = ['I did not like this movie']\n",
     "X = vect.transform(example)\n",
-    "clf.predict(X)"
+    "clf_test.classify(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ImportError",
+     "evalue": "No module named 'Classifier'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-6ed38b1c83e2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mClassifier\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mclf_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSGDClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'log'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_iter\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mexample\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'I loved this movie'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvect\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexample\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mclf_test\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: No module named 'Classifier'"
+     ]
     }
    ],
    "source": [
-    "import Classifier\n",
-    "clf_test = SGDClassifier(loss='log', random_state=1, n_iter=1)\n",
     "example = ['I loved this movie']\n",
     "X = vect.transform(example)\n",
-    "clf_test.predict(X)"
+    "clf_test.classify(X)"
    ]
   },
   {
